Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/NonStaticFieldExpr3.out
NonStaticFieldExpr3.java:14:30: compiler.err.non-static.cant.be.ref: kindname.variable, x
1 error
